fixed rendering issues on small and very small screens

--- a/css/ews.css
+++ b/css/ews.css
@@ -13,20 +13,21 @@ body {
 
 .title {
   text-transform: uppercase;
+  line-height: 150px;
   margin-top: 50px;
   font-family: 'Lato', sans-serif;
   font-size: 200px;
   font-weight: 100;
   text-align: center;
       color: black;
+      word-break: keep-all;
   }
 
   .subtitle {
     text-transform: uppercase;
-    margin-top: -40px;
     font-family: 'Lato', sans-serif;
     font-size: 40px;
-    font-weight: 100;
+    font-weight: 300;
     text-align: center;
         color: black;
   }
@@ -46,7 +47,7 @@ body {
 
 .icons
 {
-  margin-top: 20%;
+  margin-top: 35%;
   text-align: center;
   color: black;
 }
@@ -111,32 +112,65 @@ a:active {
     color: #00E1FF;
 }
 
-
 @media only screen and (max-width: 767px) {
   body  {
     background-image: url("../img/background-mobile.jpg");
   }
 
   .title {
-    margin-top: 10p
-    font-weight: 700;
-    font-size: 40px;
+    margin-top: 10px;
+    font-size: 120px;
+    line-height: 90px;
   }
 
   .title #a
   {
-    letter-spacing: 0px;
+    letter-spacing: -20px;
   }
   .title #b
   {
-    letter-spacing: 0px;
+    letter-spacing: -20px;
   }
   .title #c
   {
-    letter-spacing: 0px;
+    letter-spacing: -30px;
   }
 
   .subtitle{
-    font-size: 20px;
-    margin-top: 0px;
+    font-weight: 400;
+    font-size: 15px;
+    margin-top: 15px;
+  }
+
+  @media only screen and (max-width: 450px) {
+
+    body  {
+      background-image: url("../img/background-mobile.jpg");
+    }
+
+    .title {
+      margin-top: 10px;
+      font-weight: 700;
+      font-size: 60px;
+      line-height: 55px;
+    }
+
+    .title #a
+    {
+      letter-spacing: 0px;
+    }
+    .title #b
+    {
+      letter-spacing: 0px;
+    }
+    .title #c
+    {
+      letter-spacing: 0px;
+    }
+
+    .subtitle{
+      font-weight: 400;
+      font-size: 15px;
+      margin-top: 0px;
+    }
   }
